Auto switch to subject when click on Moodle page

--- a/views/work/one.jade
+++ b/views/work/one.jade
@@ -39,7 +39,7 @@ block content
     
       include homework
     
-    .row
+    .row#day-schedule
       br.hidden-xs
       hr.visible-xs
       .col-xs-12
@@ -74,4 +74,3 @@ block content
         input.dial(title="Amount of Quizzes", data-toggle="tooltip", type="text", value="50", data-fgcolor="#7643a8", data-readonly="true", data-width="100")
         span.right-spacer
         input.dial(title="Amount of Projects", data-toggle="tooltip", type="text", value="50", data-fgcolor="#ff4309", data-readonly="true", data-width="100")
-    
