--- a/views/work/one.jade
+++ b/views/work/one.jade
@@ -8,16 +8,6 @@ block content
         b.hidden-xs.right #{scheduleDay}-Day
     
     .row
-      .col-sm-3.col-md-2.hidden-xs
-        br
-        ul.nav.nav-pills.nav-stacked
-          li.active(role='presentation')
-            a(href='#homework-tab') Homework
-              span.badge.right.hw-badge 
-          li(role='presentation')
-            a(href='#tests-tab') Tests/Quizzes
-          li(role='presentation')
-            a(href='#') Messages
       .col-xs-12.visible-xs
         p.no-margin.full-width.text-center#schedule-day
           if previousDay !== false
@@ -27,6 +17,7 @@ block content
           if nextDay !== false
             span
               a.fa.fa-arrow-right.right(href='/work/'+nextDay, title="View the next work day!")    
+      .col-xs-12
         hr(style="margin-top: 0")
         ul.nav.nav-pills
           li.active(role='presentation')
