Moved online badge to sidebar

--- a/views/parts/sidebar.jade
+++ b/views/parts/sidebar.jade
@@ -23,6 +23,9 @@ aside#sidebar
           a(href="#", title="You will not appear on the online users list.")
             img(src="/images/status-offline.png")
             |  Offline
+      br
+      a(href="#", tabindex="0", role="button", data-toggle="popover", data-trigger="focus", data-content="<b>You</b>", data-placement="bottom").online-badge
+        span.badge 1 online
     if todaysInfo 
       #scheduleDaySidebar(data-toggle="tooltip", title="Today is a "+todaysInfo.scheduleDay+" Schedule Day.")
         hr(style="margin-bottom: 10px;")
