--- a/views/home/homepage.jade
+++ b/views/home/homepage.jade
@@ -37,7 +37,7 @@ block content
             .progress
               .progress-bar(role='progressbar', aria-valuemin='0', aria-valuemax='100', style='width: 0%;')
     hr
-    .row
+    .row(style="padding-right: 25px;padding-left: 25px;")
       .col-xs-12.col-md-6
         h3.no-margin Looking to talk with classmates?
         p.
@@ -50,6 +50,7 @@ block content
           | Need some music to relax to or do homework with? Look no further than
           b
             a(target="_blank", href="http://www.musicforprogramming.net")  here!
+    hr
     .row
       .col-xs-12
         include tabs
