--- a/views/layout.jade
+++ b/views/layout.jade
@@ -47,7 +47,7 @@ html
         ga('create', '#{analytics_code}', 'auto');
         ga('send', 'pageview');
     
-    script(src='/socket.io/socket.io.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.7/socket.io.min.js')
     script(src="/script.js?9999")
     if openLogin
       script $(function(){$("#login-modal").modal()})
