Added Trello link

--- a/views/parts/header.jade
+++ b/views/parts/header.jade
@@ -27,6 +27,8 @@ header
                 a(target="_blank", title="View the public source code behind this project, maintained solely by me.", href="https://github.com/Apexal/ontrac") Source Code
               li
                 a(target="_blank", title="View the recorded issues that I'm working on for the site.", href="https://waffle.io/Apexal/ontrac/join") Issue Progress
+              li
+                a(target="_blank", title="View the features that are being worked on and that are coming soon.", href="https://trello.com/b/b9JwXnPH/ontrac") Planned Features
           if loggedIn
             if isHomepage == false
               li.dropdown
