Added advertisement slideshow to homepage

--- a/client/css/all.css
+++ b/client/css/all.css
@@ -252,3 +252,10 @@ span.badge {
 #sidebar .online-badge span {
   margin-bottom: 10px;
 }
+
+
+#advertisements {
+  width: 350px;
+  height: 150px;
+  margin: 0 auto;
+}
