--- a/views/home/homepage.jade
+++ b/views/home/homepage.jade
@@ -52,6 +52,10 @@ block content
             a(target="_blank", href="http://www.musicforprogramming.net")  here!
     hr
     .row
+      .col-xs-12.text-center
+        include ads
+    hr
+    .row
       .col-xs-12
         include tabs
     .row
