--- a/client/css/all.css
+++ b/client/css/all.css
@@ -256,6 +256,19 @@ span.badge {
 
 #advertisements {
   width: 350px;
-  height: 150px;
   margin: 0 auto;
+}
+
+.slidesjs-pagination{
+  display: none;
+}
+
+a.slidesjs-navigation {
+  color: #222;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.slidesjs-previous {
+  margin-right: 20px;
 }
