Removed excess logging

--- a/views/parts/sidebar.jade
+++ b/views/parts/sidebar.jade
@@ -4,7 +4,7 @@ aside#sidebar
     a(href="#", tabindex="0", role="button", data-toggle="popover", data-trigger="focus", data-content="<b>You</b>", data-placement="bottom").online-badge
       span.badge 1 online
     #user-status.dropdown
-      img#status-circle(src="/images/status-online.png")
+      img#status-circle(src="/images/status-available.png")
       span &nbsp;
       b.dropdown-toggle(data-toggle="dropdown") Loading...
         span.caret
