--- a/client/css/all.css
+++ b/client/css/all.css
@@ -107,12 +107,30 @@ a.undecorated {
   word-wrap: break-word;
 }
 
+#next-schedule .list-group{
+  color: #222;
+}
+
 #online-list {
-    max-height: 200px;
+  max-height: 200px;
 }
 
 #online-list-mobile {
-    max-height: 100px;
+  max-height: 100px;
+}
+
+#scheduleDaySidebar {
+  background-color: white;
+  color: #222;
+}
+
+#user-status {
+  display: inline-block;
+}
+
+.online-badge {
+  margin-left: 10px;
+  display: inline-block;
 }
 
 @media (max-width: 768px) {
@@ -248,11 +266,6 @@ span.badge {
   font-size: 0.9em;
   white-space: nowrap;
 }
-
-#sidebar .online-badge span {
-  margin-bottom: 10px;
-}
-
 
 #advertisements {
   width: 350px;
