Restructured image folder, added Steam Group ad

--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -5,7 +5,7 @@ block content
     include /info
     
     .jumbotron
-      img.right.hidden-xs(title="Logo by the amazing John Chiaramonte.", style="width: 100%; max-width: 200px;", src="/images/logo256x256.png")
+      img.right.hidden-xs(title="Logo by the amazing John Chiaramonte.", style="width: 100%; max-width: 200px;", src="/images/logos/logo256x256.png")
       h1 Welcome To OnTrac
       
       p.
