--- a/views/home/ads.jade
+++ b/views/home/ads.jade
@@ -1,7 +1,10 @@
 #advertisements
   a(href="mumble://"+currentUser.username+":regis@regismumble.ddns.net/School?version=1.2.0")
     img(src="/images/mumblead2.png")
-  img(src="https://placeholdit.imgix.net/~text?txtsize=33&txt=SLIDE2&w=350&h=150")
+  a(target="_blank", href="http://steamcommunity.com/groups/ludusregum")
+    img(src="/images/steamgroup.png")
   img(src="https://placeholdit.imgix.net/~text?txtsize=33&txt=SLIDE3&w=350&h=150")
   img(src="https://placeholdit.imgix.net/~text?txtsize=33&txt=SLIDE4&w=350&h=150")
   img(src="https://placeholdit.imgix.net/~text?txtsize=33&txt=SLIDE5&w=350&h=150")
+
+img(src="images/ads/steamgroup.png")
