--- a/views/parts/header.jade
+++ b/views/parts/header.jade
@@ -8,7 +8,7 @@ header
           span.icon-bar
           span.icon-bar
         a#brand.navbar-brand(href=(isHomepage ? "#" : "/home"))
-          img#ontrac-img(title="Homepage.", src="/images/logos/logo64x64.png")
+          img.tilt#ontrac-img(title="Homepage.", src="/images/logos/logo64x64.png")
       #navbar.navbar-collapse.collapse
         ul.nav.navbar-nav
           //
