--- a/views/users/list.jade
+++ b/views/users/list.jade
@@ -5,7 +5,7 @@ block content
     include /info
 
     .page-header
-      h1(title="The cool guys.") Registered Users
+      h1(title="The cool guys.") Registered Users #[small [Alpha Testers]]
         if tableForm == false
           a.btn.btn-default.right(href="/users?table=1") Table Form
         else
