Chat box color on unread, auto scroll

--- a/client/css/chat.css
+++ b/client/css/chat.css
@@ -117,3 +117,7 @@ main.chatpage {
 }
 
 #advchat-badge, #advchat-badge-mobile { display: none; }
+
+.panel-primary #toggle-chat {
+  color: white;
+}
