--- a/views/work/index.jade
+++ b/views/work/index.jade
@@ -26,8 +26,6 @@ block content
         
         .col-xs-12
           p.text-center &nbsp;
-          ul
-            li Loading items...
       
       .col-xs-12.col-sm-6.col-md-3#upcoming(data-closest=closestDay)
         .page-header
@@ -36,9 +34,9 @@ block content
         
         .col-xs-12
           p.text-center &nbsp;
-          ul
-            li Loading items...
-      
+          table.table.table-condensed
+            tr
+              td 
       .col-xs-12.col-sm-6.center
         img(style="width: 100%; max-height: 500px;", src="/images/graph.png")
       .col-xs-12
